# git-analyzer

./: .gitignore  GIT_ANALYZER_PROJECT_PLAN.md  README.md  formatters.py  git_parser.py  main.py  pyproject.toml  requirements.txt  stats.py
.github/workflows/: ci.yml
tests/: test_formatters.py  test_git_parser.py  test_main.py  test_stats.py
